Alignment is not correct in "Sign here" section and "Admin" signature on "Signing" page with "Landscape" mode on "IPAD" device

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -228,8 +228,17 @@ a:link
 
 .signature-wrapper-displayonly-signed{
     position:relative; 
+    margin-left: 12%;
     
 }
+
+@media screen and (max-width: 600px) {
+    .signature-wrapper-displayonly-signed{
+        
+        margin-left: 8%;
+        
+    }
+  }
 
 .icon-success-check{
     position:relative; 
